Fix CSS alignment problems

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-main {
-    min-height: calc(100vh - 7.5rem);
+.container {
+    min-height: -webkit-fill-available;
 }
